# nix-your-shell

./: Cargo.toml  README.md  default.nix  flake.nix  flake.systems.nix
.config/: nextest.toml
.github/: labeler.yml
.github/workflows/: ci.yaml  get-crate-version.sh  label.yaml  poc-test.yml  poc.yml  release.yaml  tag.yaml  version.yaml
data/: env.fish  env.fish.j2  env.nu  env.nu.j2  env.sh  env.sh.j2  env.xsh  env.xsh.j2  env.zsh
src/: main.rs  nix.rs  shell.rs
tests/: simple.rs
tests/harness/: command.rs  mod.rs
